src : remove api key

--- a/langchain.ipynb
+++ b/langchain.ipynb
@@ -31,7 +31,7 @@
       "outputs": [],
       "source": [
         "# 아래에 자신의 key를 붙여넣기\n",
-        "KEY = \"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\""
+        "KEY = \"...\""
       ]
     },
     {
